exports[`Storyshots App Default View 1`] = `
<div
  className="App">
  <nav
    className="navbar navbar-default navbar-fixed-top navbar-inverse">
    <div
      className="container-fluid">
      <div
        className="navbar-header">
        <a
          className="navbar-brand"
          href="/">
          Webpack Dependency Size
        </a>
      </div>
    </div>
  </nav>
  <aside
    className="container-fluid">
    <div
      className="row">
      <div
        className="col-xs-12">
        <div
          onClick={[Function]}
          style={undefined}>
          <input
            className="form-control"
            id="drag-drop-upload"
            style={
              Object {
                "display": "none",
              }
            }
            type="file" />
          <div
            className="well well-sm clearfix">
            <div
              className="form-horizontal">
              <div
                className="form-group col-sm-6">
                <label
                  className="control-label">
                  Drag & Drop your 
                  <code>
                    stats.json
                  </code>
                   file here
                </label>
                <span
                  className="col-sm-12 help-block"
                  id="drag-drop-helpblock">
                  Run 
                  <kbd>
                    webpack --json > stats.json
                  </kbd>
                   to get started.
                </span>
              </div>
              <div
                className="form-group col-sm-6"
                onClick={[Function]}>
                <label
                  className="col-sm-2 control-label"
                  htmlFor="data-file-picker">
                  File
                </label>
                <div
                  className="col-sm-10">
                  <select
                    className="form-control"
                    id="data-file-picker"
                    onChange={[Function]}>
                    <option
                      value="" />
                  </select>
                </div>
                <span
                  className="col-sm-12 help-block"
                  id="drag-drop-helpblock">
                  or pick an existing stats file.
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </aside>
  <main
    className="container-fluid">
    <div
      className="row">
      <div
        className="col-xs-12" />
    </div>
  </main>
</div>
`;

exports[`Storyshots FileInputRow File loaded 1`] = `
<div
  onClick={[Function]}
  style={undefined}>
  <input
    className="form-control"
    id="drag-drop-upload"
    style={
      Object {
        "display": "none",
      }
    }
    type="file" />
  <div
    className="well well-sm clearfix">
    <div
      className="form-horizontal">
      <div
        className="form-group col-sm-6">
        <label
          className="col-sm-2 control-label">
          Loaded
        </label>
        <div
          className="col-sm-10">
          <p
            className="form-control-static">
            stats.json
          </p>
        </div>
      </div>
      <div
        className="form-group col-sm-6"
        onClick={[Function]}>
        <label
          className="col-sm-2 control-label"
          htmlFor="data-file-picker">
          File
        </label>
        <div
          className="col-sm-10">
          <select
            className="form-control"
            id="data-file-picker"
            onChange={[Function]}>
            <option
              value="" />
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FileInputRow No file 1`] = `
<div
  onClick={[Function]}
  style={undefined}>
  <input
    className="form-control"
    id="drag-drop-upload"
    style={
      Object {
        "display": "none",
      }
    }
    type="file" />
  <div
    className="well well-sm clearfix">
    <div
      className="form-horizontal">
      <div
        className="form-group col-sm-6">
        <label
          className="control-label">
          Drag & Drop your 
          <code>
            stats.json
          </code>
           file here
        </label>
        <span
          className="col-sm-12 help-block"
          id="drag-drop-helpblock">
          Run 
          <kbd>
            webpack --json > stats.json
          </kbd>
           to get started.
        </span>
      </div>
      <div
        className="form-group col-sm-6"
        onClick={[Function]}>
        <label
          className="col-sm-2 control-label"
          htmlFor="data-file-picker">
          File
        </label>
        <div
          className="col-sm-10">
          <select
            className="form-control"
            id="data-file-picker"
            onChange={[Function]}>
            <option
              value="" />
          </select>
        </div>
        <span
          className="col-sm-12 help-block"
          id="drag-drop-helpblock">
          or pick an existing stats file.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SortLabel Something else is sorted 1`] = `<span />`;

exports[`Storyshots SortLabel This field is sorted ASC 1`] = `
<span>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-attributes" />
   
</span>
`;

exports[`Storyshots SortLabel This field is sorted DESC 1`] = `
<span>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-attributes-alt" />
   
</span>
`;

exports[`Storyshots SortLabel This field is type \`alpha\` 1`] = `
<span>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-order" />
   
  Name
</span>
`;

exports[`Storyshots SortLabel This field is type \`order\` 1`] = `
<span>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-order" />
   
  Name
</span>
`;

exports[`Storyshots SortLabel This field is type size 1`] = `
<span>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-attributes-alt" />
   
</span>
`;

exports[`Storyshots Unit  1`] = `
<span>
  Size
</span>
`;

exports[`Storyshots Unit 2 Bytes (b) 1`] = `
<span
  title="2">
  2.4 B
</span>
`;

exports[`Storyshots Unit 2.4 Bytes (b) 1`] = `
<span
  title="2">
  2.4 B
</span>
`;

exports[`Storyshots Unit 2.4 Gigabytes (GB) 1`] = `
<span
  title="2,400,000,000">
  2.4 GB
</span>
`;

exports[`Storyshots Unit 2.4 Kilobytes (KB) 1`] = `
<span
  title="2,400">
  2.4 KB
</span>
`;

exports[`Storyshots Unit 2.4 Megabytes (MB) 1`] = `
<span
  title="2,400,000">
  2.4 MB
</span>
`;

exports[`Storyshots Unit 2.4 Terabytes (TB) 1`] = `
<span
  title="2,400,000,000,000">
  2.4 TB
</span>
`;

exports[`Storyshots Unit Something else is sorted 1`] = `
<span>
  Size
</span>
`;

exports[`Storyshots Unit This field is sorted ASC 1`] = `
<span>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-attributes" />
   
  Size
</span>
`;

exports[`Storyshots Unit This field is sorted DESC 1`] = `
<span>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-attributes-alt" />
   
  Name
</span>
`;

exports[`Storyshots Unit This field is type \`alpha\` 1`] = `
<span>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-alphabet" />
   
  Name
</span>
`;

exports[`Storyshots Unit This field is type \`order\` 1`] = `
<span>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-order" />
   
  Rank
</span>
`;

exports[`Storyshots Unit Two  1`] = `
<span
  title="100">
  100 B
</span>
`;

exports[`Storyshots Unit Two Bytes (b) 1`] = `
<span
  title="100">
  100 B
</span>
`;

exports[`Storyshots Unit Two Gigabytes (GB) 1`] = `
<span
  title="100">
  100 B
</span>
`;

exports[`Storyshots Unit Two Kilobytes ( 1`] = `
<span
  title="100">
  100 B
</span>
`;

exports[`Storyshots Unit Two Kilobytes (KB) 1`] = `
<span
  title="100">
  100 B
</span>
`;

exports[`Storyshots Unit Two Megabytes (MB) 1`] = `
<span
  title="100">
  100 B
</span>
`;

exports[`Storyshots Unit Two Megabytes 1`] = `
<span
  title="100">
  100 B
</span>
`;

exports[`Storyshots Unit Two Terabytes (TB) 1`] = `
<span
  title="100">
  100 B
</span>
`;

exports[`Storyshots Unit Two bytes 1`] = `
<span
  title="100">
  100 B
</span>
`;

exports[`Storyshots Unit Two kilobytes 1`] = `
<span
  title="100">
  100 B
</span>
`;

exports[`Storyshots Unit bytes 1`] = `
<span>
  Size
</span>
`;

exports[`Storyshots Unit kilobytes 1`] = `
<span>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-attributes" />
   
  Size
</span>
`;

exports[`Storyshots Unit two bytes 1`] = `
<span>
  Size
</span>
`;

exports[`Storyshots Unit two kilobytes 1`] = `
<span
  title="100">
  100 B
</span>
`;
